[metadata]
name = odbcdol
version = 0.0.3
url = https://github.com/i2mint/odbcdol
platforms = any
description_file = README.md
root_url = https://github.com/i2mint/
license = apache-2.0

description = odbc (through pyodbc) with a simple (dict-like or list-like) interface
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = odbcdol

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	dol
	pyodbc

